rbx_xml/src/tests/snapshots/rbx_xml__tests__basic__one_to_many_migrated_properties.snap
---
source: rbx_xml/src/tests/basic.rs
expression: "std::str::from_utf8(&encoded).unwrap()"
---
<roblox version="4">
  <Item class="UICorner" referent="0">
    <Properties>
      <string name="Name">UICorner</string>
      <UDim name="BottomLeftRadius">
        <S>0.5</S>
        <O>12</O>
      </UDim>
      <UDim name="BottomRightRadius">
        <S>0.5</S>
        <O>12</O>
      </UDim>
      <UDim name="TopLeftRadius">
        <S>0.5</S>
        <O>12</O>
      </UDim>
      <UDim name="TopRightRadius">
        <S>0.5</S>
        <O>12</O>
      </UDim>
    </Properties>
  </Item>
</roblox>
