rbx_xml/src/tests/snapshots/rbx_xml__tests__basic__write_empty_properties_serialize.snap
---
source: rbx_xml/src/tests/basic.rs
expression: "std::str::from_utf8(&encoded).unwrap()"
---
<roblox version="4">
  <Item class="StyleRule" referent="0">
    <Properties>
      <string name="Name">StyleRule</string>
      <BinaryString name="PropertiesSerialize">AAAAAA==</BinaryString>
    </Properties>
  </Item>
</roblox>
